welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: illegal start of simple pattern
	var new nums:Array[Int]=0
            ^indexOfValue:3: error: '=' expected but '}' found.
}
^