welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
	var new nums:Array[Int]=0
}
	for (i<-0 to nums.length-1){
		if (nums(i)==lookingFor){
			return lookingFor
		} else {
		return -1
		
	}
}
